--- a/views/less/views/start.less
+++ b/views/less/views/start.less
@@ -4,5 +4,9 @@
     background-image: url('../img/main.png');
     background-size: cover;
     background-position: center center;
+
+    .content {
+      transform: translateY(25vh);
+    }
   }
 }
