--- a/views/less/components/menu.less
+++ b/views/less/components/menu.less
@@ -1,4 +1,5 @@
 #menu-component {
+  display: none;
   position: absolute;
   z-index: 2;
   width: 100%;
@@ -6,15 +7,22 @@
   top: 0;
   background-color: @main-dark;
 
-  img {
+  label {
     height: 4rem;
     width: 4rem;
     float: right;
+    margin-top: 1rem;
+    margin-right: 1rem;
 
     &:after{
       content: " ";
       display: block; 
       clear: both;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
 
