--- a/views/templates/components/menu.hbs
+++ b/views/templates/components/menu.hbs
@@ -1,6 +1,6 @@
 <div id="menu-component">
   <div class="content">
-     <img src="../img/close.svg"/>
+     <label for="open-close-menu"><img src="../img/close.svg"/></label>
     <nav>
       <ul>
         <li><a href="#">Start</a></li>
