--- a/views/less/views/start.less
+++ b/views/less/views/start.less
@@ -6,7 +6,28 @@
     background-position: center center;
 
     .content {
-      transform: translateY(25vh);
+      transform: translateY(20vh);
+    }
+  }
+
+  .reanactment-section {
+    background-color: @main-dark;
+    height: 100vh;
+
+    h2 {
+
+    }
+
+    h3 {
+      color: @red;
+      font-size: 5rem;
+      margin-bottom: 0;
+    }
+
+    p {
+      color: @white;
+      margin-top: 0;
     }
   }
 }
+
