--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -10,5 +10,18 @@
         <h2>Viking age renactors</h2>
       </div>
     </section>
+    <section class="reanactment-section">
+      <div class="content">
+        <h2>Reanactment</h2>
+        <img />
+        <h3>Warriors</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
+          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon. 
+        </p>
+      </div>
+    </section>
+
   </body>
 </html>
