General fixes on front page

--- a/views/less/variabels.less
+++ b/views/less/variabels.less
@@ -3,10 +3,12 @@
 @main-dark: #292929;
 @dark-dark: #000;
 @white: #fff;
+@main-light: #535353;
 
 /* Fonts */
 @main-font: 'norseregular';
 @min-font-bold: 'norsebold';
+@sub-font: 'Playfair Display';
 
 @font-face {
   font-family: 'norsebold';
@@ -22,6 +24,13 @@
        url('../fonts/norse-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Playfair Display';
+  font-weight: normal;
+  font-style: normal;
+
 }
 
 /* Break-points */
