--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,10 +10,12 @@ body {
   color: #fff;
 }
 .content {
+  padding: 5rem 0;
   margin: 0 1.5rem;
 }
 @media (min-width: 768px) {
   .content {
+    padding: 15rem 0;
     margin: 0 3rem;
   }
 }
@@ -29,10 +31,28 @@ h1 {
 h2 {
   font-size: 4rem;
 }
+@media (min-width: 768px) {
+  h1 {
+    font-size: 20rem;
+  }
+  h2 {
+    font-size: 8rem;
+  }
+}
+h3 {
+  font-family: 'Playfair Display';
+  font-weight: normal;
+  text-transform: uppercase;
+}
 p {
-  color: #FF5151;
+  color: #fff;
   font-size: 1.8rem;
   line-height: 1.4;
+}
+@media (min-width: 768px) {
+  p {
+    font-size: 2.2rem;
+  }
 }
 a {
   color: #fff;
@@ -40,29 +60,180 @@ a {
 }
 #start .top-section {
   height: 100vh;
-  background-image: url('../img/main.png');
+  background: linear-gradient(to bottom, transparent 50%, black), url('../img/main.png');
   background-size: cover;
   background-position: center center;
 }
 #start .top-section .content {
-  transform: translateY(20vh);
+  padding: 0;
+  position: relative;
+  top: 15vh;
+}
+@media (min-width: 768px) {
+  #start .top-section .content {
+    top: 45vh;
+  }
+}
+#start .top-section img {
+  height: 6rem;
+  width: 6rem;
+  display: block;
+  position: absolute;
+  bottom: 2rem;
+  right: 0;
+  left: 0;
+  margin: auto;
+  animation: jump 6s ease-in infinite;
+  animation-delay: 5s;
+}
+@keyframes jump {
+  0%,
+  35%,
+  43%,
+  50%,
+  100% {
+    transform: translateY(0rem);
+  }
+  40% {
+    transform: translateY(-4rem);
+  }
+  46% {
+    transform: translateY(-3.5rem);
+  }
 }
 #start .reanactment-section {
   background-color: #292929;
-  height: 100vh;
+  min-height: 100vh;
+}
+@media (min-width: 768px) {
+  #start .reanactment-section .content {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+#start .reanactment-section img {
+  display: block;
+  height: 5rem;
+  width: 5rem;
+  margin: 2rem auto 0 auto;
+}
+@media (min-width: 768px) {
+  #start .reanactment-section img {
+    height: 7rem;
+    width: 7rem;
+    margin-bottom: 8rem;
+  }
+}
+#start .reanactment-section h2 {
+  font-size: 5rem;
+}
+@media (min-width: 768px) {
+  #start .reanactment-section h2 {
+    font-size: 6rem;
+  }
 }
 #start .reanactment-section h3 {
   color: #FF5151;
   font-size: 5rem;
   margin-bottom: 0;
+  margin-top: 3rem;
+}
+@media (min-width: 768px) {
+  #start .reanactment-section h3 {
+    float: left;
+    margin-top: 0;
+    line-height: 1;
+    margin-right: 1rem;
+    font-size: 7rem;
+  }
 }
 #start .reanactment-section p {
   color: #fff;
   margin-top: 0;
 }
+@media (min-width: 768px) {
+  #start .reanactment-section p:after {
+    content: " ";
+    display: block;
+    clear: both;
+  }
+}
+#start .hire-us-section {
+  min-height: 100vh;
+  text-align: left;
+  background: linear-gradient(to left, transparent, black), url('../img/fighters.png');
+  background-size: cover;
+  background-position: center left;
+}
+@media (min-width: 768px) {
+  #start .hire-us-section {
+    background-position: center center;
+  }
+}
+@media (min-width: 768px) {
+  #start .hire-us-section .content {
+    width: 40%;
+    padding-top: 14vh;
+    margin-left: 10%;
+  }
+}
+#start .hire-us-section .content h2 {
+  text-align: left;
+  margin-bottom: 0;
+  font-size: 6rem;
+}
+#start .hire-us-section .content h3 {
+  color: #FF5151;
+  font-size: 3rem;
+  margin-top: 0;
+}
+#start .hire-us-section .content p {
+  margin-top: 10vh;
+}
+@media (min-width: 768px) {
+  #start .hire-us-section .button-component {
+    text-align: left;
+  }
+}
+#start .join-us-section {
+  background-color: #000;
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%), url('../img/aaron.png'), #000;
+  background-repeat: no-repeat;
+  background-position: center left;
+  padding-top: 10vh;
+}
+@media (min-width: 768px) {
+  #start .join-us-section {
+    background-size: contain;
+  }
+}
+@media (min-width: 768px) {
+  #start .join-us-section .content {
+    width: 40%;
+    margin-left: 60%;
+    text-align: left;
+  }
+}
+#start .join-us-section .content h2 {
+  text-align: left;
+  font-size: 6rem;
+}
+#start .join-us-section .content h3 {
+  color: #FF5151;
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+#start .join-us-section .button-component {
+  margin-top: 5rem;
+}
+@media (min-width: 768px) {
+  #start .join-us-section .button-component {
+    text-align: left;
+  }
+}
 /* Components */
 header {
-  position: fixed;
+  position: absolute;
   width: 100%;
 }
 header input[type=checkbox] {
@@ -112,6 +283,87 @@ header .content #nav-trigger img {
   margin: 10% 0;
 }
 header .content:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+footer {
+  background-color: #000;
+  padding: 4vh 0;
+  font-size: 3rem;
+  font-family: 'norseregular';
+}
+@media (min-width: 768px) {
+  footer {
+    font-size: 4rem;
+    padding: 0;
+  }
+}
+@media (min-width: 768px) {
+  footer .content {
+    padding: 10rem 0;
+  }
+}
+footer ul {
+  padding-left: 0;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  footer ul {
+    display: inline-block;
+  }
+}
+footer ul li {
+  list-style-type: none;
+  line-height: 5rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  footer ul li {
+    display: inline-block;
+    margin-right: 3rem;
+    text-align: left;
+  }
+}
+@media (min-width: 768px) {
+  footer ul:first-of-type {
+    float: left;
+  }
+}
+footer ul:last-of-type {
+  margin-top: 3rem;
+}
+@media (min-width: 768px) {
+  footer ul:last-of-type {
+    float: right;
+    margin-top: 0;
+  }
+}
+footer ul:last-of-type a {
+  display: block;
+  margin: 0 auto;
+  border: 1px solid #fff;
+  height: 5rem;
+  width: 5rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+footer ul:last-of-type li {
+  width: 50%;
+  float: left;
+}
+@media (min-width: 768px) {
+  footer ul:last-of-type li {
+    width: initial;
+    text-align: left;
+    display: inline-block;
+  }
+}
+footer:after {
   content: " ";
   display: block;
   clear: both;
@@ -219,6 +471,31 @@ header .content:after {
   display: block;
   padding: 1rem 0;
 }
+.button-component {
+  text-align: center;
+  margin-top: 5rem;
+}
+@media (min-width: 768px) {
+  .button-component {
+    margin-top: 10rem;
+  }
+}
+.button-component a {
+  font-family: 'norseregular';
+  font-size: 4rem;
+  border: 1px solid #fff;
+  padding: 1rem 2rem;
+  background-image: linear-gradient(#535353, #535353);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  transition: background-size 0.5s, color 0.5s;
+}
+.button-component a:hover {
+  cursor: pointer;
+  background-size: 100% 100%;
+  color: #fff;
+}
 /* Mixins */
 /* Variabels */
 /* Colors */
@@ -232,6 +509,11 @@ header .content:after {
 @font-face {
   font-family: 'norseregular';
   src: url('../fonts/norse-webfont.woff2') format('woff2'), url('../fonts/norse-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Playfair Display';
   font-weight: normal;
   font-style: normal;
 }
