--- a/views/less/main.less
+++ b/views/less/main.less
@@ -4,7 +4,9 @@
 
 /* Components */
 @import "components/header";
+@import "components/footer";
 @import "components/menu";
+@import "components/button";
 
 /* Mixins */
 @import "mixins/border-radius";
