--- a/views/less/views/general.less
+++ b/views/less/views/general.less
@@ -10,8 +10,10 @@ body {
 }
 
 .content{
+  padding: 5rem 0;
   margin: 0 1.5rem;
   @media (min-width: @screen-sm) {
+    padding: 15rem 0;
     margin: 0 3rem;
   }
 }
@@ -33,10 +35,29 @@ h2 {
   font-size: 4rem;
 }
 
+@media (min-width: @screen-sm) {
+  h1 {
+    font-size: 20rem;
+  }
+
+  h2{
+    font-size: 8rem;
+  }
+}
+
+h3 {
+  font-family: @sub-font;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
 p{
-  color: @red;
+  color: @white;
   font-size: 1.8rem;
   line-height: 1.4;
+  @media (min-width: @screen-sm) {
+    font-size: 2.2rem;
+  }
 }
 
 a {
