--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   </head>
   <body id="start">
     {{>header}}
@@ -9,19 +10,53 @@
         <h1>Skåne Lag</h1>
         <h2>Viking age renactors</h2>
       </div>
+      <img src="../img/there-is-more.svg"/>
     </section>
     <section class="reanactment-section">
       <div class="content">
         <h2>Reanactment</h2>
-        <img />
+        <img src="../img/viking-icon.svg"/>
         <h3>Warriors</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. 
+          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon.
         </p>
+        {{> button 
+          text='Learn More' 
+          link="#" 
+        }}
       </div>
     </section>
-
+    <section class="hire-us-section">
+      <div class="content">
+        <h2>Hire Us</h2>
+        <h3>Movies · Shows</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
+          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon.
+        </p>
+        {{> button 
+          text='Learn More' 
+          link="#" 
+        }}
+      </div>
+    </section>
+    <section class="join-us-section">
+      <div class="content">
+        <h3>Join us</h3>
+        <h2>Become a viking</h2>
+        {{> button 
+          text='Learn More' 
+          link="#" 
+        }}
+      </div>
+    </section>
+    {{>footer}}
   </body>
 </html>
