--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -27,7 +27,7 @@
         </p>
         {{> button 
           text='Learn More' 
-          link="#" 
+          link="/reanactment" 
         }}
       </div>
     </section>
