--- a/views/templates/components/menu.hbs
+++ b/views/templates/components/menu.hbs
@@ -3,8 +3,8 @@
      <label for="open-close-menu"><img src="../img/close.svg"/></label>
     <nav>
       <ul>
-        <li><a href="#">Start</a></li>
-        <li><a href="#">Reanactment</a></li>
+        <li><a href="/start">Start</a></li>
+        <li><a href="/reanactment">Reanactment</a></li>
         <li><a href="#">Hire Us</a></li>
       </ul>
     </nav>
