Create view mixins and starting to move code

--- a/views/less/main.less
+++ b/views/less/main.less
@@ -12,5 +12,11 @@
 @import "mixins/border-radius";
 @import "mixins/fade-animation";
 
+/* View Mixins */
+@import "view-mixins/top-section";
+@import "view-mixins/text-and-image-section";
+@import "view-mixins/text-section";
+@import "view-mixins/image-section";
+
 /* Variabels */
 @import "variabels";
