--- a/views/less/views/start.less
+++ b/views/less/views/start.less
@@ -1,19 +1,6 @@
 #start {
   .top-section {
-    min-height: 100vh;
-    background: linear-gradient(to bottom, transparent 50%, black), url('../img/main.png');
-    background-size: cover;
-    background-position: center center;
-
-    .content {
-      padding: 0;
-      //position: relative;
-      padding-top: 15vh;
-
-      @media (min-width: @screen-sm) {
-        padding-top: 45vh;
-      }
-    }
+    .top-section;
 
     img {
       height: 6rem;
