--- a/views/less/main.less
+++ b/views/less/main.less
@@ -1,6 +1,7 @@
 /* Views */
 @import "views/general";
 @import "views/start";
+@import "views/reanactment";
 
 /* Components */
 @import "components/header";
