--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body id="start">
+  <body id="reanactment">
     {{>header}}
     <section class="top-section">
       <div class="content">
@@ -13,9 +13,9 @@
       </div>
     </section>
 
-    <section class="reanactment-section">
+    <section class="vikings-section">
       <div class="content">
-        <h3>Warriors</h3>
+        <h3>Vikings</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
@@ -26,7 +26,27 @@
       </div>
     </section>
     
-    <section class="hire-us-section">
+    <section class="image-slide-section">
+      <div class="content">
+        <h3>Movies · Shows</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+      </div>
+    </section>
+
+    <section class="historical-section">
+      <div class="content">
+        <h3>Historical</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
+          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon.
+        </p>
+      </div>
+    </section>
+
+    <section class="fight-section">
       <div class="content">
         <h2>Hire Us</h2>
         <h3>Movies · Shows</h3>
@@ -44,38 +64,7 @@
       </div>
     </section>
 
-    <section class="reanactment-section">
-      <div class="content">
-        <h3>Warriors</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
-        </p>
-      </div>
-    </section>
-
-    <section class="hire-us-section">
-      <div class="content">
-        <h2>Hire Us</h2>
-        <h3>Movies · Shows</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
-        </p>
-        {{> button 
-          text='Learn More' 
-          link="#" 
-        }}
-      </div>
-    </section>
-
-    <section class="hire-us-section">
+    <section class="craftmanship-section">
       <div class="content">
         <h2>Hire Us</h2>
         <h3>Movies · Shows</h3>
