--- a/views/less/view-mixins/text-section.less
+++ b/views/less/view-mixins/text-section.less
@@ -1,3 +1,62 @@
 .text-section () {
+  background-color: @main-dark;
 
+  .content {
+    @media (min-width: @screen-sm) {
+      width: 80%;
+      margin: 0 auto;
+    }
+    @media (min-width: @screen-l) {
+      width: 50%;
+    }
+  }
+
+  img {
+    display: block;
+    height: 5rem;
+    width: 5rem;
+    margin: 2rem auto 0 auto;
+
+    @media (min-width: @screen-sm) {
+      height: 7rem;
+      width: 7rem;
+      margin-bottom: 8rem;
+    }
+  }
+
+  h2 {
+    font-size: 5rem;
+    text-align: center;
+    @media (min-width: @screen-sm) {
+      font-size: 6rem;
+    }
+  }
+
+  h3 {
+    color: @red;
+    font-size: 5rem;
+    margin-bottom: 0;
+    margin-top: 3rem;
+
+    @media (min-width: @screen-sm) {
+      float: left;
+      margin-top: 0;
+      line-height: 1;
+      margin-right: 1rem;
+      font-size: 7rem;
+    }
+  }
+
+  p {
+    color: @white;
+    margin-top: 0;
+    
+    @media (min-width: @screen-sm) {
+      &:after{
+        content: " ";
+        display: block; 
+        clear: both;
+      }
+    }
+  }
 }
