--- a/views/less/views/start.less
+++ b/views/less/views/start.less
@@ -1,6 +1,6 @@
 #start {
   .top-section {
-    .top-section;
+    .top-section('../img/main.png');
 
     img {
       height: 6rem;
@@ -33,106 +33,13 @@
   }
 
   .reanactment-section {
-    background-color: @main-dark;
     min-height: 100vh;
-
-    .content {
-      @media (min-width: @screen-sm) {
-        width: 80%;
-        margin: 0 auto;
-      }
-      @media (min-width: @screen-l) {
-        width: 50%;
-      }
-    }
-
-    img {
-      display: block;
-      height: 5rem;
-      width: 5rem;
-      margin: 2rem auto 0 auto;
-
-      @media (min-width: @screen-sm) {
-        height: 7rem;
-        width: 7rem;
-        margin-bottom: 8rem;
-      }
-    }
-
-    h2 {
-      font-size: 5rem;
-      @media (min-width: @screen-sm) {
-        font-size: 6rem;
-      }
-    }
-
-    h3 {
-      color: @red;
-      font-size: 5rem;
-      margin-bottom: 0;
-      margin-top: 3rem;
-
-      @media (min-width: @screen-sm) {
-        float: left;
-        margin-top: 0;
-        line-height: 1;
-        margin-right: 1rem;
-        font-size: 7rem;
-      }
-    }
-
-    p {
-      color: @white;
-      margin-top: 0;
-      
-      @media (min-width: @screen-sm) {
-        &:after{
-          content: " ";
-          display: block; 
-          clear: both;
-        }
-      }
-    }
+    .text-section();
   }
 
   .hire-us-section {
     min-height: 100vh;
-    text-align: left;
-    background: linear-gradient(to left, transparent, black), url('../img/fighters.png');
-    background-size: cover;
-    background-position: center left;
-    @media (min-width: @screen-sm) {
-      background-position: center center;
-    }
-
-
-    .content {
-      @media (min-width: @screen-sm) {
-        width: 50%;
-        padding-top: 14vh;
-        margin-left: 10%;
-      }
-
-      @media (min-width: @screen-l) {
-        width: 40%;
-      }
-
-      h2 {
-        text-align: left;
-        margin-bottom: 0;
-        font-size: 6rem;
-      }
-
-      h3 {
-        color: @red;
-        font-size: 3rem;
-        margin-top: 0;
-      }
-
-      p {
-        margin-top: 10vh;
-      }
-    }
+    .text-and-image-section('left');
 
     @media (min-width: @screen-sm) {
       .button-component {
