--- a/views/less/views/start.less
+++ b/views/less/views/start.less
@@ -39,7 +39,7 @@
 
   .hire-us-section {
     min-height: 100vh;
-    .text-and-image-section('left');
+    .text-and-image-section('left', '../img/fighters.png');
 
     @media (min-width: @screen-sm) {
       .button-component {
