--- a/views/less/views/reanactment.less
+++ b/views/less/views/reanactment.less
@@ -16,11 +16,11 @@
   }
 
   .fight-section {
-    .text-and-image-section('left');
+    .text-and-image-section('left', '../img/fighters.png');
   }
 
   .craftmanship-section {
-    .text-and-image-section('right');
+    .text-and-image-section('right', '../img/craftmanship.jpg');
   }
 
   .join-us-section {
